# service-engine-x

./: .env.example  .gitignore  SERX_MIGRATION_AUDIT.md  doppler.yaml  mcp-build-plan.md  middleware.ts  package-lock.json  package.json  phase-1-schema-plan.md  phase-2-schema-plan.md  phase-3-schema-plan.md  phase-4-schema-plan.md  phase-5-schema-plan.md  phase-6-schema-plan.md  phase-7-schema-plan.md  proxy.ts  railway.json  schema-and-build-plan.md  serx-mcp-deployment-state.md  trigger.config.ts  tsconfig.json
service-engine-x-api/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  ENGAGEMENT-SCHEMA.md  MIGRATION-COMPLETE.md  Makefile  PHASE-1-UPDATE.md  PHASE-2-UPDATE.md  PHASE-3-UPDATE.md  PHASE-4-UPDATE.md  PHASE-5-UPDATE.md  PHASE-6-UPDATE.md  PHASE-7-UPDATE.md  check_debug.py  check_org.py  check_signature.py  create_acme_engagement.py  docker-compose.yml  generate_token.py  openapi.json  pyproject.toml  railway.toml  requirements.txt  update-accounts-contacts.md  update.md  update_modernfull_org.py
service-engine-x-api/app/: __init__.py  config.py  database.py  main.py
service-engine-x-api/docs/: AUTHENTICATION.md  CALCOM-DEALS.md  DATA-MODEL.md  INFRASTRUCTURE.md  MEETINGS-DEALS-PROPOSAL.md  MULTI-TENANT-ARCHITECTURE.md  SESSION-2026-04-07-STRIPE-ELEMENTS.md  SPP-API-REFERENCE.md  TAXONOMY.md
service-engine-x-api/migrations/: 002_add_engagement_model.sql  003_conversations_project_scoped.sql  004_add_stripe_fields.sql  005_add_notification_email.sql  005_add_systems.sql  006_add_accounts_contacts.sql  007_migrate_clients_to_accounts.sql  008_drop_systems.sql  (+14 more)
serx-webhooks/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
(+675 files in other folders)
