[project]
name = "service-engine-x-api"
version = "1.0.0"
description = "Service Engine X REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic[email]>=2.7,<3",
    "pydantic-settings>=2.7,<3",
    "supabase>=2.13,<3",
    "python-multipart>=0.0.18",
    "httpx>=0.28,<1",
    "stripe>=7.0.0",
    "resend>=0.7.0",
    "email-validator>=2.0.0",
    "docraptor>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
